src/cbor/libqcborarray.bf

public struct QCborArray__ConstIterator
{
	[LinkName("QCborArray__ConstIterator_new")]
	public static extern void* QCborArray__ConstIterator_new(QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_new2")]
	public static extern void* QCborArray__ConstIterator_new2();
	[LinkName("QCborArray__ConstIterator_new3")]
	public static extern void* QCborArray__ConstIterator_new3(QCborArray__ConstIterator param1);
	[LinkName("QCborArray__ConstIterator_OperatorAssign")]
	public static extern void QCborArray__ConstIterator_OperatorAssign(void* c_this, QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_OperatorMultiply")]
	public static extern QCborValueConstRef QCborArray__ConstIterator_OperatorMultiply(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorMinusGreater")]
	public static extern QCborValueConstRef QCborArray__ConstIterator_OperatorMinusGreater(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorSubscript")]
	public static extern QCborValueConstRef QCborArray__ConstIterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorEqual(void* c_this, QCborArray__Iterator o);
	[LinkName("QCborArray__ConstIterator_OperatorNotEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorNotEqual(void* c_this, QCborArray__Iterator o);
	[LinkName("QCborArray__ConstIterator_OperatorLesser")]
	public static extern bool QCborArray__ConstIterator_OperatorLesser(void* c_this, QCborArray__Iterator other);
	[LinkName("QCborArray__ConstIterator_OperatorLesserOrEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserOrEqual(void* c_this, QCborArray__Iterator other);
	[LinkName("QCborArray__ConstIterator_OperatorGreater")]
	public static extern bool QCborArray__ConstIterator_OperatorGreater(void* c_this, QCborArray__Iterator other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterOrEqual")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterOrEqual(void* c_this, QCborArray__Iterator other);
	[LinkName("QCborArray__ConstIterator_OperatorEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__ConstIterator_OperatorEqualWithQCborArrayConstIterator(void* c_this, QCborArray__ConstIterator o);
	[LinkName("QCborArray__ConstIterator_OperatorNotEqualWithQCborArrayConstIterator")]
	public static extern bool QCborArray__ConstIterator_OperatorNotEqualWithQCborArrayConstIterator(void* c_this, QCborArray__ConstIterator o);
	[LinkName("QCborArray__ConstIterator_OperatorLesserWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserWithOther(void* c_this, QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorLesserOrEqualWithOther(void* c_this, QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterWithOther(void* c_this, QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QCborArray__ConstIterator_OperatorGreaterOrEqualWithOther(void* c_this, QCborArray__ConstIterator other);
	[LinkName("QCborArray__ConstIterator_OperatorPlusPlus")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorPlusPlus(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorPlusPlusWithInt")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__ConstIterator_OperatorMinusMinus")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorMinusMinus(void* c_this);
	[LinkName("QCborArray__ConstIterator_OperatorMinusMinusWithInt")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QCborArray__ConstIterator_OperatorPlusAssign")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinusAssign")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorPlus")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinus")]
	public static extern QCborArray__ConstIterator QCborArray__ConstIterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QCborArray__ConstIterator_OperatorMinusWithQCborArrayConstIterator")]
	public static extern int32 QCborArray__ConstIterator_OperatorMinusWithQCborArrayConstIterator(void* c_this, QCborArray__ConstIterator j);
}